OESE-314 fix overlapping column values on print

--- a/css/nalrc.css
+++ b/css/nalrc.css
@@ -624,6 +624,7 @@ font-size:12px; background:#ffffff; border-bottom-left-radius: 8px; border-botto
 .hidden-magnified { display:none; }
 /** Programs Page Print Styles **/
 .dt-print-view { padding:20px; }
+.dt-print-view table.wpDataTable { table-layout:fixed !important; width:100% !important; }
 .dt-print-view table.wpDataTable thead tr th { background-color:#F1F1F1 !important; text-align:center; }
 .dt-print-view table.wpDataTable thead tr th:first-child{ background-color:#F1F1F1 !important; }
 .dt-print-view table.wpDataTable tr td, .dt-print-view table.wpDataTable thead tr th { padding:5px; }
@@ -647,9 +648,11 @@ font-size:12px; background:#ffffff; border-bottom-left-radius: 8px; border-botto
 .dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(9),
 .dt-print-view table.wpDataTable.wpDataTableID-67 tr td:last-child { width:8% !important; }
 .dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(4) { width:18% !important; }
-.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(7) { width:10% !important; }
+.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(7) { width:10% !important; word-break:break-all !important; }
 .dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(3),
-.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(8) { width:12% !important; word-break:break-all; }
+.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(8) { width:12% !important; }
+.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(9),
+.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:last-child { word-break:break-all !important;  }
 @media only screen and (max-width:1200px){
 	.nalrc-banner .nalrc-nav { max-width:25%;flex-basis:25% }
 	.nalrc-banner .nalrc-slider { max-width:76%; flex-basis:76%; }
@@ -1006,9 +1009,11 @@ font-size:12px; background:#ffffff; border-bottom-left-radius: 8px; border-botto
 	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(9),
 	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:last-child { width:8% !important; }
 	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(4) { width:18% !important; }
-	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(7) { width:10% !important; }
+	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(7) { width:10% !important; word-break:break-all !important; }
 	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(3),
-	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(8) { width:12% !important; word-break:break-all; }
+	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(8) { width:12% !important; }
+	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:nth-child(9),
+	.dt-print-view table.wpDataTable.wpDataTableID-67 tr td:last-child { word-break:break-all !important;  }
 	@page { 
 		margin-top: 15mm !important;
 	}
